--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css\style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
 
+
     <title>Int20h</title>
 </head>
 
@@ -26,7 +27,7 @@
                         <span></span>
                         <span></span> ЗАРЕЄСТРУВАТИСЯ
                     </a><br/>
-                    <span class='banner__info__dates'>22-23 ЛЮТОГО</span><br/>
+                    <span class='banner__info__dates'>21-22 лютого</span><br/>
                     <span class='banner__info__place'>ONLINE</span>
                 </div>
             </div>
@@ -140,6 +141,73 @@
     </div>
     <div class="how">
         <img src="images/timeline.png" alt="">
+    </div>
+    <div class="сol-lg-12 head">
+        FAQ
+    </div>
+    <div class="faq">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12">
+                    <details>
+                        <summary>Участь безкоштовна?
+                            <span><img src="images/arrow.png" alt=""></span>
+                        </summary>
+                        <div class='answer'>
+                            Так, участь у хакатоні абсолютно безкоштовна.
+                        </div>
+                    </details>
+                    <details>
+                        <summary class='non-brd'>Де відбудеться хакатон?
+                            <span><img src="images/arrow.png" alt=""></span>
+                        </summary>
+                        <div class='answer'>
+                            INT20H буде проходити онлайн. Але не засмучуйся! Ти зможеш кодити офлайн у наших хабах з цілодобовим доступом, інтернетом та фановою атмосферою. Вони будуть розташовані у великих містах України. Згодом ми повідомимо точні адреси.
+                        </div>
+                    </details>
+                    <details>
+                        <summary class='non-brd'>Яке ПЗ мені потрібно для участі?
+                            <span><img src="images/arrow.png" alt=""></span>
+                        </summary>
+                        <div class='answer'>
+                            Для проведення хакатону буде використовуватися ZOOM. Щодо технологій виконання завдань обмежень немає.
+                        </div>
+                    </details>
+                    <details>
+                        <summary class='non-brd'>Який початковий поріг знань?
+                            <span><img src="images/arrow.png" alt=""></span>
+                        </summary>
+                        <div class='answer'>
+                            Для участі потрібен мінімальний рівень знань. Він буде визначений за допомогою тестового завдання, що виконується після реєстрації. Той, хто успішно його виконає, потрапить на хакатон. Тому не вагайся — подавайся!
+                        </div>
+                    </details>
+                    <details>
+                        <summary class='non-brd'>Якою має бути команда?
+                            <span><img src="images/arrow.png" alt=""></span>
+                        </summary>
+                        <div class='answer'>
+                            Команда має складатися з 2-4 учасників. Обов’язково програмістів? Ні. Якщо ти знаєш, як представити продукт користувачам не зі сторони написання коду, welcome, але хоча б один розробник в команді має бути.
+                        </div>
+                    </details>
+                    <details>
+                        <summary class='non-brd'>Що робити, якщо я не маю команди?
+                            <span><img src="images/arrow.png" alt=""></span>
+                        </summary>
+                        <div class='answer'>
+                            Не панікуй! Реєструйся, а ми додамо тебе в чат, де ти зможеш знайти команду відповідно до обраної тобою категорії.
+                        </div>
+                    </details>
+                    <details>
+                        <summary class='non-brd'>Скільки буде переможців?
+                            <span><img src="images/arrow.png" alt=""></span>
+                        </summary>
+                        <div class='answer'>
+                            У кожній категорії буде 3 команди-переможці, яких визначать журі за оголошеними критеріями.
+                        </div>
+                    </details>
+                </div>
+            </div>
+        </div>
     </div>
 
     <script src="js\jquery-3.5.1.min.js"></script>
