--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="css\bootstrap.css">
     <link rel="stylesheet" href="css\style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
-
-
+    <link rel="stylesheet" type="text/css" href="slick/slick.css" />
+    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css" />
     <title>Int20h</title>
 </head>
 
@@ -210,10 +210,49 @@
         </div>
     </div>
 
+    <div class="сol-lg-12 head">
+        Як це було минулого року
+    </div>
+    <div class="last-year">
+        <div class="container-xl">
+            <div class="row">
+                <div class="aftervideo col-lg-5">
+                    <p>Афтервідео INT20H</p>
+                    <div class="embed-responsive embed-responsive-16by9 center-block">
+                        <iframe class='embed-responsive-item' src="https://www.youtube.com/embed/S1i5coU-0_Q" allowfullscreen></iframe>
+                    </div>
+                </div>
+                <div class="col-lg-2"></div>
+                <div class="winners col-lg-5">
+                    <p>Переможці INT20H</p>
+                    <div class="your-class">
+                        <div class='winimg'><img src="images/web-chemps.png" alt=""></div>
+                        <div class='winimg'><img src="images/mobile-chemps.png" alt=""></div>
+                        <div class='winimg'><img src="images/emb-chemps.png" alt=""></div>
+                        <div class='winimg'><img src="images/ds-chemps.png" alt=""></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
     <script src="js\jquery-3.5.1.min.js"></script>
     <script src="js\bootstrap.min.js"></script>
+
     <script src="https://cdn.rawgit.com/nnattawat/flip/master/dist/jquery.flip.min.js"></script>
     <script src='js\script.js'></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="slick/slick.min.js"></script>
+    <script>
+        $('.your-class').slick({
+            infinite: true,
+            speed: 300,
+            slidesToShow: 1,
+            adaptiveHeight: false
+        });
+    </script>
 </body>
 
 </html>
