--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="pageBenefits-card firstCard">
             <div class="front">
                 <img class="pageBenefits-img" src="images/expirience.png" alt="" />
-                <h4 class="pageBenefits-text">Expirience</h4>
+                <h4 class="pageBenefits-text">Experience</h4>
             </div>
             <div class="back">
                 <p>
@@ -232,6 +232,193 @@
                         <div class='winimg'><img src="images/ds-chemps.png" alt=""></div>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+    <div class="сol-lg-12 head">
+        Партнери
+    </div>
+    <div class="partners-color">
+        <div class="container">
+            <div class="partners">
+
+                <div class="partners__body">
+                    <div class="partner-logo">
+                        <img src="images/techiia.png" />
+                    </div>
+                    <div class="partner-logo">
+                        <img src="images/techiia.png" />
+                    </div>
+                    <div class="partner-logo">
+                        <img src="images/techiia.png" />
+                    </div>
+                    <div class="partner-logo">
+                        <img src="images/techiia.png" />
+                    </div>
+                    <div class="partner-logo">
+                        <img src="images/techiia.png" />
+                    </div>
+                    <div class="partner-logo">
+                        <img src="images/techiia.png" />
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="сol-lg-12 head">
+        Команда організаторів
+    </div>
+    <div class="organizers-1">
+
+        <div class="box">
+            <div class="imgBx">
+                <img src="images/MO.jpg" width='200px' height='180px' alt="">
+            </div>
+            <div class="content">
+                <h2>Головний організатор</h2>
+            </div>
+            <div class="content-later">
+                <span>Софія Шумель</span>
+                <span class='smaller'>Головний організатор</span>
+                <span class="smaller">34shumelsof@gmail.com</span>
+                <span class="smaller">+380688402293</span>
+            </div>
+        </div>
+        <div class="box">
+            <div class="imgBx">
+                <img src="images/MO.jpg" width='200px' height='180px' alt="">
+            </div>
+            <div class="content">
+                <h2>Головний організатор</h2>
+            </div>
+            <div class="content-later">
+                <span>Софія Шумель</span>
+                <span class='smaller'>Головний організатор</span>
+                <span class="smaller">34shumelsof@gmail.com</span>
+                <span class="smaller">+380688402293</span>
+            </div>
+        </div>
+        <div class="box">
+            <div class="imgBx">
+                <img src="images/MO.jpg" width='200px' height='180px' alt="">
+            </div>
+            <div class="content">
+                <h2>Головний організатор</h2>
+            </div>
+            <div class="content-later">
+                <span>Софія Шумель</span>
+                <span class='smaller'>Головний організатор</span>
+                <span class="smaller">34shumelsof@gmail.com</span>
+                <span class="smaller">+380688402293</span>
+            </div>
+        </div>
+    </div>
+    <div class="organizers-1">
+        <div class="box">
+            <div class="imgBx">
+                <img src="images/MO.jpg" width='200px' height='180px' alt="">
+            </div>
+            <div class="content">
+                <h2>Головний організатор</h2>
+            </div>
+            <div class="content-later">
+                <span>Софія Шумель</span>
+                <span class='smaller'>Головний організатор</span>
+                <span class="smaller">34shumelsof@gmail.com</span>
+                <span class="smaller">+380688402293
+                </span>
+            </div>
+        </div>
+        <div class="box">
+            <div class="imgBx">
+                <img src="images/MO.jpg" width='200px' height='180px' alt="">
+            </div>
+            <div class="content">
+                <h2>Головний організатор</h2>
+            </div>
+            <div class="content-later">
+                <span>Софія Шумель</span>
+                <span class='smaller'>Головний організатор</span>
+                <span class="smaller">34shumelsof@gmail.com</span>
+                <span class="smaller">+380688402293
+                </span>
+            </div>
+        </div>
+        <div class="box">
+            <div class="imgBx">
+                <img src="images/MO.jpg" width='200px' height='180px' alt="">
+            </div>
+            <div class="content">
+                <h2>Головний організатор</h2>
+            </div>
+            <div class="content-later">
+                <span>Софія Шумель</span>
+                <span class='smaller'>Головний організатор</span>
+                <span class="smaller">34shumelsof@gmail.com</span>
+                <span class="smaller">+380688402293
+                </span>
+            </div>
+        </div>
+        <div class="box">
+            <div class="imgBx">
+                <img src="images/MO.jpg" width='200px' height='180px' alt="">
+            </div>
+            <div class="content">
+                <h2>Головний організатор</h2>
+            </div>
+            <div class="content-later">
+                <span>Софія Шумель</span>
+                <span class='smaller'>Головний організатор</span>
+                <span class="smaller">34shumelsof@gmail.com</span>
+                <span class="smaller">+380688402293
+                </span>
+            </div>
+        </div>
+    </div>
+    <div class="organizers-2">
+        <div class="box">
+            <div class="imgBx">
+                <img src="images/MO.jpg" width='200px' height='180px' alt="">
+            </div>
+            <div class="content">
+                <h2>Головний організатор</h2>
+            </div>
+            <div class="content-later">
+                <span>Софія Шумель</span>
+                <span class='smaller'>Головний організатор</span>
+                <span class="smaller">34shumelsof@gmail.com</span>
+                <span class="smaller">+380688402293
+                </span>
+            </div>
+        </div>
+        <div class="box">
+            <div class="imgBx">
+                <img src="images/MO.jpg" width='200px' height='180px' alt="">
+            </div>
+            <div class="content">
+                <h2>Головний організатор</h2>
+            </div>
+            <div class="content-later">
+                <span>Софія Шумель</span>
+                <span class='smaller'>Головний організатор</span>
+                <span class="smaller">34shumelsof@gmail.com</span>
+                <span class="smaller">+380688402293
+                </span>
+            </div>
+        </div>
+        <div class="box">
+            <div class="imgBx">
+                <img src="images/MO.jpg" width='200px' height='180px' alt="">
+            </div>
+            <div class="content">
+                <h2>Головний організатор</h2>
+            </div>
+            <div class="content-later">
+                <span>Софія Шумель</span>
+                <span class='smaller'>Головний організатор</span>
+                <span class="smaller">34shumelsof@gmail.com</span>
+                <span class="smaller">+380688402293
+                </span>
             </div>
         </div>
     </div>
