--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
                     <div class="categories__container__table">
                         <table style="width:100%" border="0">
                             <tr>
-                                <th><img src="images/web.png" alt=""></th>
+                                <th class='im'><img src="images/web.png" alt=""></th>
                                 <th style="padding-left: 2vw"><span class="innerCategories">Web development</span></th>
                             </tr>
                             <tr>
-                                <th><img src="images/mobile.png" alt=""></th>
+                                <th class='im'><img src="images/mobile.png" alt=""></th>
                                 <th style="padding-left: 2vw"><span class="innerCategories">Mobile development</span></th>
                             </tr>
                         </table>
@@ -423,6 +423,48 @@
         </div>
     </div>
 
+    <div class="who-we-are">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-7">
+                    <p class="probest">Про BEST</p>
+                    Board of European Students of Technology — міжнародна студентська організація в Європі. Наша мета — розвиток студентів. Саме організацією проєктів, які покликані відкрити потенціал української молоді й покращити їх особистісні та професійні навички, займається
+                    представник BEST в Україні — локальна група BEST Kyiv.
+                </div>
+
+                <div class="col-lg-5 mt-0">
+                    <div class="foto">
+                        <img src="images/best.png" alt=""></div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="register-now">
+        <div class="container">
+            <div class="register-box">
+                <span>Реєструйся до хх січня включно!</span>
+                <a href="#">
+                    ЗАРЕЄСТРУВАТИСЯ
+                </a>
+            </div>
+        </div>
+    </div>
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-3">
+                    <a href='#'><img src="images/best-link.png" alt=""></a>
+                    <a href='#'><img src="images/insta-link.png" alt=""></a>
+                    <a href='#'><img src="images/facebook-link.png" alt=""></a>
+                    <a href='#'><img src="images/telegram-link.png" alt=""></a>
+                </div>
+                <div class="col-lg-7"></div>
+                <div class="col-lg-1"><a href='#'>Регламент</a></div>
+                <div class="col-lg-1"></div>
+            </div>
+        </div>
+    </footer>
 
     <script src="js\jquery-3.5.1.min.js"></script>
     <script src="js\bootstrap.min.js"></script>
