--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
     <div class="banner">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-xl-7 col-md-7"></div>
-                <div class="col-xl-5 col-sm-12 col-md-5 banner__info">
+                <div class="col-lg-7"></div>
+                <div class="col-lg-5  banner__info">
                     <a href="#">
                         <span></span>
                         <span></span>
                         <span></span>
                         <span></span> ЗАРЕЄСТРУВАТИСЯ
-                    </a><br/>
+                    </a>
                     <span class='banner__info__dates'>21-22 лютого</span><br/>
                     <span class='banner__info__place'>ONLINE</span>
                 </div>
@@ -41,6 +41,28 @@
             </div>
         </div>
     </div>
+
+    <div class="banner-mobile">
+        <div class="banner-mobile__logo" data-aos="fade-left" data-aos-duration="1500">
+            <img src="images/logo.png" />
+        </div>
+        <div class="banner-mobile__description" data-aos="fade-right" data-aos-duration="1500">
+            <a href="#">
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span> ЗАРЕЄСТРУВАТИСЯ
+            </a>
+            <span class='banner-mobile__dates'>21-22 лютого</span>
+            <span class='banner-mobile__place'>ONLINE</span>
+        </div>
+    </div>
+
+    <div class="banner-mobile-about">
+        <span class="banner-mobile-about__timer">00:00:00</span>
+        <span class="banner-mobile-about__hackathon"><br/>INT20H — щорічні IT-змагання, організовані студентами для студентів. Протягом 20 годин учасники працюють над створенням новітніх рішень у вибраних категоріях, прокачують свої hard і soft skills.</span>
+    </div>
+
     <div class="сol-lg-12 head">
         Категорії
     </div>
@@ -48,21 +70,28 @@
         <div class="container-fluid">
             <center>
                 <div class="col-lg-12 categories__container">
-                    <div class="categories__container__table">
-                        <table style="width:100%" border="0">
-                            <tr>
-                                <th class='im'><img src="images/web.png" alt=""></th>
-                                <th style="padding-left: 2vw"><span class="innerCategories">Web development</span></th>
-                            </tr>
-                            <tr>
-                                <th class='im'><img src="images/mobile.png" alt=""></th>
-                                <th style="padding-left: 2vw"><span class="innerCategories">Mobile development</span></th>
-                            </tr>
-                        </table>
+                    <div class="container">
+                        <div class="row bot">
+                            <div class="col-lg-4 cat-img">
+                                <img src="images/web.png" alt="">
+                            </div>
+                            <div class="col-lg-8 innerCategories">
+                                <span>Web development</span>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-4 cat-img">
+                                <img src="images/mobile.png" alt="">
+                            </div>
+                            <div class="col-lg-8 innerCategories">
+                                <span>Mobile development</span>
+                            </div>
+                        </div>
                     </div>
+                </div>
             </center>
-            </div>
         </div>
+    </div>
     </div>
     <div class="сol-lg-12 head">
         Що ти отримаєш
@@ -216,7 +245,7 @@
     <div class="last-year">
         <div class="container-xl">
             <div class="row">
-                <div class="aftervideo col-lg-5">
+                <div class="aftervideo col-lg-5" style='padding-bottom: 16%;'>
                     <p>Афтервідео INT20H</p>
                     <div class="embed-responsive embed-responsive-16by9 center-block">
                         <iframe class='embed-responsive-item' src="https://www.youtube.com/embed/S1i5coU-0_Q" allowfullscreen></iframe>
