--- a/index.html
+++ b/index.html
@@ -654,7 +654,7 @@
 
                 <div class="col-lg-6 mt-0">
                     <div class="foto">
-                        <img src="images/we_best.jpg" alt=""></div>
+                        <img src="images/we_best.png" alt=""></div>
                 </div>
             </div>
         </div>
